--- a/index.html
+++ b/index.html
@@ -4,32 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Livros</title>
+    <!-- Adiciona o Bootstrap (CSS) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Catálogo de Livros</h1>
+    <div class="container mt-5">
+        <h1 class="mb-4">Catálogo de Livros</h1>
 
-    <form id="filtroForm">
-        <label for="genero">Filtrar por Gênero:</label>
-        <input type="text" id="genero" name="genero">
-        <button type="button" onclick="filtrarLivros()">Filtrar</button>
-    </form>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" id="barraPesquisa" placeholder="Pesquisar por título ou autor">
+            <button class="btn btn-outline-secondary" type="button" onclick="pesquisarLivros()">Pesquisar</button>
+        </div>
 
-    <div id="livros-container"></div>
-
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Título</th>
+                    <th scope="col">Autor</th>
+                    <th scope="col">Ano de Publicação</th>
+                    <th scope="col">Gênero</th>
+                </tr>
+            </thead>
+            <tbody id="tabelaLivros">
+            </tbody>
+        </table>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script>
-        async function filtrarLivros() {
-            const genero = document.getElementById('genero').value;
-            const response = await fetch(`/livros/consulta/${genero}`);
-            const livrosFiltrados = await response.json();
-
-            const livrosContainer = document.getElementById('livros-container');
-            livrosContainer.innerHTML = "";
-            livrosFiltrados.forEach(livro => {
-                const livroElement = document.createElement('div');
-                livroElement.innerHTML = `<p><strong>Título:</strong> ${livro.titulo}, <strong>Autor:</strong> ${livro.autor}</p>`;
-                livrosContainer.appendChild(livroElement);
+        async function pesquisarLivros() {
+            const termo = document.getElementById('barraPesquisa').value;
+            const response = await fetch(`http://127.0.0.1:3000/livros/`);
+            
+            const livrosEncontrados = await response.json();
+            console.log(livrosEncontrados);
+            const tabelaLivros = document.getElementById('tabelaLivros');
+            tabelaLivros.innerHTML = "";
+            livrosEncontrados.forEach(livro => {
+                const row = tabelaLivros.insertRow();
+                row.innerHTML = `<td>${livro.id}</td>
+                                <td>${livro.titulo}</td>
+                                <td>${livro.autor}</td>
+                                <td>${livro.anoPublicacao}</td>
+                                <td>${livro.genero}</td>`;
             });
         }
     </script>
 </body>
-</html>
+</html> 
